--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ aiohttp==3.11.11
 aiosignal==1.3.2
 altair==5.5.0
 annotated-types==0.7.0
-anyio==4.7.0
+anyio==4.8.0
 asttokens==3.0.0
 attrs==24.3.0
 blinker==1.9.0
@@ -23,7 +23,9 @@ configparser==7.1.0
 contourpy==1.3.1
 cycler==0.12.1
 cymem==2.0.10
+dataclasses-json==0.6.7
 distro==1.9.0
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
 etelemetry==0.3.1
 executing==2.1.0
 filelock==3.16.1
@@ -31,14 +33,15 @@ fitz==0.0.1.dev2
 fonttools==4.55.3
 frozenlist==1.5.0
 fsspec==2024.12.0
-gitdb==4.0.11
-GitPython==3.1.43
+gitdb==4.0.12
+GitPython==3.1.44
 graphviz==0.20.3
 greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.7
 httplib2==0.22.0
 httpx==0.28.1
+httpx-sse==0.4.0
 huggingface-hub==0.27.1
 icecream==2.1.4
 idna==3.10
@@ -53,6 +56,7 @@ jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 kiwisolver==1.4.8
 langchain==0.3.14
+langchain-community==0.3.14
 langchain-core==0.3.29
 langchain-text-splitters==0.3.5
 langcodes==3.5.0
@@ -63,22 +67,24 @@ lxml==5.3.0
 marisa-trie==1.2.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+marshmallow==3.25.0
 matplotlib==3.10.0
 mdurl==0.1.2
 mpmath==1.3.0
 multidict==6.1.0
 murmurhash==1.0.11
-narwhals==1.20.1
+mypy-extensions==1.0.0
+narwhals==1.21.1
 networkx==3.4.2
 nibabel==5.3.2
 nipype==1.9.2
 numpy==1.26.4
-openai==1.58.1
+openai==1.59.3
 orjson==3.10.14
 packaging==24.2
 pandas==2.2.3
 pathlib==1.0.1
-pillow==11.0.0
+pillow==11.1.0
 pinecone-client==5.0.1
 pinecone-plugin-inference==1.1.0
 pinecone-plugin-interface==0.0.7
@@ -87,15 +93,16 @@ propcache==0.2.1
 protobuf==5.29.2
 prov==2.0.1
 puremagic==1.28
-py==1.11.0
 pyarrow==18.1.0
 pydantic==2.10.4
+pydantic-settings==2.7.1
 pydantic_core==2.27.2
 pydeck==0.9.1
 pydot==3.0.4
-Pygments==2.18.0
+Pygments==2.19.1
 PyMuPDF==1.25.1
 pyparsing==3.2.1
+pypdf==5.1.0
 pytextrank==3.3.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -109,7 +116,7 @@ requests==2.32.3
 requests-toolbelt==1.0.0
 rich==13.9.4
 rpds-py==0.22.3
-safetensors==0.5.0
+safetensors==0.5.1
 scikit-learn==1.6.0
 scipy==1.15.0
 sentence-transformers==3.3.1
@@ -117,7 +124,7 @@ shellingham==1.5.4
 simplejson==3.19.3
 six==1.17.0
 smart-open==7.1.0
-smmap==5.0.1
+smmap==5.0.2
 sniffio==1.3.1
 spacy==3.8.3
 spacy-legacy==3.0.12
@@ -138,6 +145,7 @@ tqdm==4.67.1
 traits==6.4.3
 transformers==4.47.1
 typer==0.15.1
+typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.3.0
